--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <i class="fab fa-linkedin icone"></i>
           Saiba mais
         </a>
-        <a class="botao-download botao-transparente" href="/assets/AndreiBarbosa - CV.pdf" download>
+        <a class="botao-download botao-transparente" href="/assets/AMB Front end - CV.pdf" download>
           <i class="fas fa-download icone"></i>
           Baixar currículo
         </a>
