--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <a href="https://github.com/andreikestrel" class="icon github" target="_blank">
         <img src="/assets/icons/github-icon.svg" alt="Icone do Github">
       </a>
-      <a href="mailto:andreibarbosa23@gmail.com" class="icon email">
+      <a href="mailto:andreibarbosa.dev@gmail.com" class="icon email">
         <img src="/assets/icons/email-icon.svg" alt="Icone de uma carta representando um email">
       </a>
     </div>
