--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1 class="txt-titulo">Andrei Barbosa</h1>
         <h2 class="txt-subtitulo">Web Developer | React | Javascript</h2>
         <p class="txt-corpo">Olá! Estou cursando Análise e Desenvolvimento de Sistemas e em 
-          meus estudos anteriores desenvolvi habilidades em HTML, CSS, JavaScript e estou me especializando em React.
+          meus estudos anteriores desenvolvi habilidades em HTML, CSS, JavaScript.
           Minha maior motivação é contribuir com soluções em desenvolvimento web, por isso tenho interesse em oportunidades 
           nas áreas em que já possuo qualificação, e estou aberto a novos desafios em outras linguagens de programação, 
           ampliando assim meu leque de habilidades e possibilidades.</p>
