--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="box-info">
       <div>
         <h1 class="txt-titulo">Andrei Barbosa</h1>
-        <h2 class="txt-subtitulo">Web Developer | React | Javascript</h2>
+        <h2 class="txt-subtitulo">Web Developer | HTML | Javascript | CSS </h2>
         <p class="txt-corpo">Olá! Estou cursando Análise e Desenvolvimento de Sistemas e em 
           meus estudos anteriores desenvolvi habilidades em HTML, CSS, JavaScript.
           Minha maior motivação é contribuir com soluções em desenvolvimento web, por isso tenho interesse em oportunidades 
