Atualizando section de projetos

--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
 
 <body>
 
-  <div class="box-telaInicial">
+  <section class="box-telaInicial">
     <div class="box-img">
       <img class="imagem-principal" src="/assets/img/imagem-principal-r.png" alt="imagem de frente do Andrei Barbosa">
       <img class="imagem-mobile" src="/assets/img/imagem-principal-q.png" alt="imagem de frente do Andrei Barbosa">
     </div>
     <div class="box-info">
-      <div>
+      <div class="box-info-txt">
         <h1 class="txt-titulo">Andrei Barbosa</h1>
         <h2 class="txt-subtitulo">Web Developer | HTML | Javascript | CSS </h2>
-        <p class="txt-corpo">Olá! Estou cursando Análise e Desenvolvimento de Sistemas e em 
+        <p class="txt-corpo">Olá! Estou cursando Análise e Desenvolvimento de Sistemas e em
           meus estudos anteriores desenvolvi habilidades em HTML, CSS, JavaScript.
-          Minha maior motivação é contribuir com soluções em desenvolvimento web, por isso tenho interesse em oportunidades 
-          nas áreas em que já possuo qualificação, e estou aberto a novos desafios em outras linguagens de programação, 
+          Minha maior motivação é contribuir com soluções em desenvolvimento web, por isso tenho interesse em
+          oportunidades
+          nas áreas em que já possuo qualificação, e estou aberto a novos desafios em outras linguagens de programação,
           ampliando assim meu leque de habilidades e possibilidades.</p>
         <p class="txt-corpo">Vamos conversar?</p>
       </div>
@@ -43,17 +44,45 @@
           Baixar currículo
         </a>
       </div>
-      
-
-
     </div>
-  </div>
-  <!-- 
-    <div>
-        <h1 class="txt-titulo">Conheça os principais projetos</h1>
+  </section>
+  <section class="projetos">
+    <div class="box-projetos">
+      <h1 class="projetos-titulo">Conheça os principais projetos</h1>
+      <div class="projetos-box-card">
+        <div class="projeto-card">
+          <h3>teste</h3>
+          <div><img src="https://cdn.mos.cms.futurecdn.net/Y7weFGYNyXjo6RsPDatstG.jpg" alt="" class="img-card">
+            <p>Veniam sit ullamco cupidatat laboris veniam laboris dolor do enim.</p>
+          </div>
+  
+        </div>
+        <div class="projeto-card">
+          <h3>teste</h3>
+          <div><img src="https://cdn.mos.cms.futurecdn.net/Y7weFGYNyXjo6RsPDatstG.jpg" alt="" class="img-card">
+            <p>Fugiat qui magna commodo adipisicing aliquip labore in commodo sunt et veniam quis nisi commodo.</p>
+          </div>
+  
+        </div>
+        <div class="projeto-card">
+          <h3>teste</h3>
+          <div> <img src="https://cdn.mos.cms.futurecdn.net/Y7weFGYNyXjo6RsPDatstG.jpg" alt="" class="img-card">
+            <p>Laborum non cupidatat ut tempor ut est quis eu qui in non sit amet.</p>
+          </div>
+  
+        </div>
+        <div class="projeto-card">
+          <h3>teste</h3>
+          <div><img src="https://cdn.mos.cms.futurecdn.net/Y7weFGYNyXjo6RsPDatstG.jpg" alt="" class="img-card">
+            <p>Veniam ad adipisicing do anim non culpa culpa velit adipisicing ut quis consequat.</p>
+          </div>
+  
+        </div>
+      </div>
     </div>
-    -->
-  <div class="box-social">
+  </section>
+  
+  <section class="box-social">
     <div class="box-icons">
       <a href="https://www.linkedin.com/in/barbosaandrei/" class="icon linkedin" target="_blank">
         <img src="/assets/icons/linkedin-icon.svg" alt="Icone do Linkedin">
@@ -66,7 +95,7 @@
       </a>
     </div>
     <h2 class="txt-subtitulo contato">Meus contatos</h2>
-  </div>
+  </section>
 
 
 </body>
