Ajustando section projetos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           ampliando assim meu leque de habilidades e possibilidades.</p>
         <p class="txt-corpo">Vamos conversar?</p>
       </div>
-      <div class="box-btn-inicial">
+      <div class="box-btn-init">
         <a class="botao-download botao-linkedin" href="https://www.linkedin.com/in/barbosaandrei/" target="_blank">
           <i class="fab fa-linkedin icone"></i>
           Saiba mais
