alterações na section de projetos

--- a/index.html
+++ b/index.html
@@ -51,37 +51,49 @@
       <h1 class="projetos-titulo">Conheça os principais projetos</h1>
       <div class="projetos-box-card">
         <div class="projeto-card">
-          <h3>teste</h3>
-          <div><img src="https://cdn.mos.cms.futurecdn.net/Y7weFGYNyXjo6RsPDatstG.jpg" alt="" class="img-card">
-            <p>Veniam sit ullamco cupidatat laboris veniam laboris dolor do enim.</p>
+          <div class="card-header">
+            <h3>Meteora</h3>
+            <a class="btn-verMais" href="https://meteora-swart-theta.vercel.app/" target="_blank">🔗</a>
           </div>
-  
+          <div class="box-projeto-img-descricao"><img src="/assets/img/meteora.jpg" alt="" class="img-card">
+            <p class="projeto-descricao">O projeto Meteora é um inovador site de comércio eletrônico de moda, criado como parte do curso de
+              Bootstrap da
+              Alura. Desenvolvido com tecnologias modernas, incluindo Bootstrap Icons e o framework CSS Bootstrap,
+              oferece uma
+              experiência de compra online intuitiva e responsiva. </p>
+          </div>
+        </div>
+        <div class="projeto-card">
+          <div class="card-header">
+            <h3>Pomodoro</h3>
+            <a class="btn-verMais" href="https://pomodoro-six-rho.vercel.app/" target="_blank">🔗</a>
+          </div>
+          <div class="box-projeto-img-descricao"><img src="/assets/img/pomodoro.jpg" alt="" class="img-card">
+            <p class="projeto-descricao">
+              O projeto do Pomodoro utiliza JavaScript para a lógica do temporizador, HTML para estruturar a interface e
+              CSS para o design. Ele segue a técnica Pomodoro, permitindo aos usuários definir períodos de trabalho e
+              descanso para melhorar a produtividade.</p>
+          </div>
+
         </div>
         <div class="projeto-card">
           <h3>teste</h3>
-          <div><img src="https://cdn.mos.cms.futurecdn.net/Y7weFGYNyXjo6RsPDatstG.jpg" alt="" class="img-card">
-            <p>Fugiat qui magna commodo adipisicing aliquip labore in commodo sunt et veniam quis nisi commodo.</p>
-          </div>
-  
-        </div>
-        <div class="projeto-card">
-          <h3>teste</h3>
-          <div> <img src="https://cdn.mos.cms.futurecdn.net/Y7weFGYNyXjo6RsPDatstG.jpg" alt="" class="img-card">
+          <div class="box-projeto-img-descricao"> <img src="https://cdn.mos.cms.futurecdn.net/Y7weFGYNyXjo6RsPDatstG.jpg" alt="" class="img-card">
             <p>Laborum non cupidatat ut tempor ut est quis eu qui in non sit amet.</p>
           </div>
-  
+
         </div>
         <div class="projeto-card">
           <h3>teste</h3>
-          <div><img src="https://cdn.mos.cms.futurecdn.net/Y7weFGYNyXjo6RsPDatstG.jpg" alt="" class="img-card">
-            <p>Veniam ad adipisicing do anim non culpa culpa velit adipisicing ut quis consequat.</p>
+          <div class="box-projeto-img-descricao"><img src="https://cdn.mos.cms.futurecdn.net/Y7weFGYNyXjo6RsPDatstG.jpg" alt="" class="img-card">
+            <p class="projeto-descricao">Veniam ad adipisicing do anim non culpa culpa velit adipisicing ut quis consequat.</p>
           </div>
-  
+
         </div>
       </div>
     </div>
   </section>
-  
+
   <section class="box-social">
     <div class="box-icons">
       <a href="https://www.linkedin.com/in/barbosaandrei/" class="icon linkedin" target="_blank">
