icone e titulo no header alterados

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Andrei Barbosa | Web Developer</title>
+  <link rel="shortcut icon" href="/assets/icons/icon.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -17,7 +18,11 @@
 
 <body>
   <header>
-    <h1 class="titulo-header">Andrei Barbosa</h1>
+    <div class="logo-title-header">
+      <img class="logo" src="/assets/icons/icon.svg" alt="Logo Andrei Barbosa">
+      <h1 class="titulo-header">Andrei Barbosa</h1>
+    </div>
+    
     <nav>
       <ul class="menu">
         <li><a href="#sobre-mim">Sobre mim</a></li>
