--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     
     <nav>
-      <ul class="menu">
+      <ul id="menu" class="menu">
         <li><a href="#sobre-mim">Sobre mim</a></li>
         <li><a href="#educacao">Educação</a></li>
         <li><a href="#projetos">Projetos</a></li>
